--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,1 @@
-webApp/node_modules/grunt/internal-tasks/
-webApp/node_modules/grunt/lib/
-webApp/node_modules/grunt/node_modules/
+webApp/node_modules/
