--- a/webApp/package.json
+++ b/webApp/package.json
@@ -69,14 +69,13 @@
     "grunt-legacy-log": "~0.1.0"
   },
   "devDependencies": {
-    "difflet": "~0.2.3",
+    "temporary": "~0.0.4",
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-replace": "^0.7.9",
+    "difflet": "~0.2.3",
     "semver": "2.1.0",
-    "shelljs": "~0.2.5",
-    "temporary": "~0.0.4"
+    "shelljs": "~0.2.5"
   },
   "_id": "grunt@0.4.5",
   "dist": {
